[package]
name = "jlsort"
version = "0.3.0"
authors = ["winebarrel <sugawara@winebarrel.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ex_merge_sort_by_key = "0.2"
getopts = "0.2"
serde_json = "1.0"
regex = "1"
once_cell = "1.8"
